--- a/client/website.css
+++ b/client/website.css
@@ -1,5 +1,14 @@
 /* CSS declarations go here */
 .css-crop-product{
 	max-width: 100%;
-	height: 80px;
+	height: 200px;
+}
+
+.css-image-about{
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.css-product-image:hover{
+	opacity: 0.5;
 }
