--- a/client/website.css
+++ b/client/website.css
@@ -1,4 +1,6 @@
 /* CSS declarations go here */
+/* primary color: C5860B */
+
 .css-crop-product{
 	max-width: 100%;
 	height: 200px;
@@ -20,10 +22,32 @@
 }
 .at-btn{
 	width: 200px;
+
 	margin-left: auto;
     margin-right: auto;
 }
 .at-signup-link{
 	text-align: center;
 	/*margin-left:42.5%;*/
+}
+
+
+
+
+h1, h2, h3 ,h4 ,h5 , p {
+	font-family: 'Exo 2', sans-serif;
+}
+/* navbar */
+
+.navbar-default {
+	background: white;
+}
+
+.navbar-brand {
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
+}
+.navbar-brand > .img-logo {
+	height: 50px;
+	width: auto;
 }
