--- a/client/website.css
+++ b/client/website.css
@@ -163,8 +163,17 @@ h3 {
 
 }
 
+.imagePost{
+  max-width: 50%;
+  max-height: 50%;
+}
+
 .css-meteor-blogpost{
   font-family: 'Exo 2', sans-serif;
+}
+
+.blodyPost{
+  font-size: 20px !important;
 }
 
  @media (max-width: 500px) {
